feat: split project in multiple files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,13 @@ cmake_minimum_required(VERSION 3.10)
 
 project(room_for_sale)
 
-add_executable(room_for_sale main.cpp)
+file(
+        GLOB
+        sources
+        "src/*.cpp"
+        "src/*.h"
+)
+add_executable(room_for_sale ${sources})
 
 # specify the C++ standard
 set(CMAKE_CXX_STANDARD 20)
